[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/rhythm_ui.gd" id="1"]

[node name="RhythmUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="ComboLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "Combo: x0"

[node name="AccuracyLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 24
text = "0.0%"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 140.0
offset_right = 300.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 28
text = "Score: 0"
